--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/uuid": "^9.0.6",
     "axios": "^1.0.0",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "prosemirror-commands": "^1.5.2",
